Add Fluent Bit pipeline with Kubernetes metadata and CloudWatch output