@@ -1,6 +1,8 @@
 package com.event.security;
 
-import org.springframework.beans.factory.annotation.Value;
+import com.event.properties.CorsProperties;
+import lombok.RequiredArgsConstructor;
+import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -15,18 +17,20 @@ import java.util.List;
  * 다른 도메인에서의 API 요청을 허용하기 위한 설정을 담당합니다
  */
 @Configuration
+@EnableConfigurationProperties(CorsProperties.class)
+@RequiredArgsConstructor
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins}")
-    private String[] allowedOrigins;
+    private final CorsProperties corsProperties;
 
     @Bean
     UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
         // 허용할 오리진(도메인) 설정
-        configuration.setAllowedOrigins(List.of(allowedOrigins));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+        configuration.setAllowedOrigins(corsProperties.getAllowedOrigins());
+        // 프론트에서 사용하는 메서드 + preflight(OPTIONS) 허용
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         // 자격 증명(쿠키, 인증 헤더 등) 포함 요청 허용
         configuration.setAllowCredentials(true);
